# slapacl-suite

./: .gitignore  Makefile  README.md  example.yaml  example.yaml.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
slapaclsuite/: __init__.py  __main__.py  commands.py  readfile.py
slapaclsuite/yaml_input_validator/: __init__.py  administrative.py  all.py  scripting.py  test.py  tests.py
tests/: context.py  test_10_ingest_yaml_file.py  test_21_validate_administrative.py  test_22_possible_dn_substitutions.py  test_22_possible_peername_substitutions.py  test_23_validate_scripting.py  test_25_validate_test.py  test_26_validate_tests.py  test_29_validate_all.py  test_51_generate_commands.py  test_52_run_tests.py  test_90_main.py
