[metadata]
name = slapaclsuite
version = file: VERSION
author = Greg Cox
author_email = gcox@mozilla.com
url = https://github.com/mozilla-it/slapaclsuite
keywords = ldap, acl, admin
license = Apache License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License

[options]
include_package_data = False
# regular description is in setup.py to get the git version.
long_description = file: README.md
long_description_content_type = 'text/markdown'
packages = find:
install_requires =
    setuptools
    PyYAML

[options.packages.find]
where = .
exclude =
    tests

[options.entry_points]
console_scripts =
    slapaclsuite = slapaclsuite.__main__:main
